# fp_server

./: .gitignore  Cargo.toml
src/: handler.rs  http_server.rs  lib.rs  parser.rs  receiver.rs  request.rs  request_builder.rs  response.rs  serializer.rs  server.rs
src/http_server/: request.rs  response.rs
src/server/: checker.rs  handler.rs  receiver.rs  responder.rs
