[package]
name = "fp_server"
version = "0.1.0"
edition = "2021"

license-file = "GPL-3.0"
description = "An abstract server representation"
homepage = "https://developergy.github.io/fp_server"
documentation = "https://docs.rs/fp_server"
repository = "https://github.com/DeveloperGY/fp_server"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
